[package]
name = "tcp_pow"
version = "1.0.0"
edition = "2021"
authors=["milos.crix@gmail.com"]
[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
log = "0.4"
env_logger = "0.10.0"
colored="2.0.0"

base64 = "0.21.2"
sha2 = "0.10.6"

chrono = "0.4.26"
rand = "0.8.5"
anyhow = "1.0.71"

serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
bincode = "1.3.3"

